5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1758_1577.log
== SUBMITION (2019-05-23 11:48:04) 
-- CODE:
from numpy import*

a =  float(input("aceleracao: "))
v0 = float(input("velocidade: "))
num = int(input("numero: "))

i=0
t = arage(num)
d = zeros(num)

i = 0

while(i<size(t)):
	d[i]=a*t[i]**2/2+v0*t[i]
	i = i+1
print(d)
-- EXECUTION TIME:
0.461904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 8, in <module>
    t = arage(num)
NameError: name 'arage' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:48:08) 
-- CODE:
from numpy import*

a =  float(input("aceleracao: "))
v0 = float(input("velocidade: "))
num = int(input("numero: "))

i=0
t = arage(num)
d = zeros(num)

i = 0

while(i<size(t)):
	d[i]=a*t[i]**2/2+v0*t[i]
	i = i+1
print(d)
-- EXECUTION TIME:
0.440341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1577/main.py", line 8, in <module>
    t = arage(num)
NameError: name 'arage' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:48:10) 
-- CODE:
from numpy import*

a =  float(input("aceleracao: "))
v0 = float(input("velocidade: "))
num = int(input("numero: "))

i=0
t = arage(num)
d = zeros(num)

i = 0

while(i<size(t)):
	d[i]=a*t[i]**2/2+v0*t[i]
	i = i+1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:48:40) 
-- CODE:
from numpy import*

a =  float(input("aceleracao: "))
v0 = float(input("velocidade: "))
num = int(input("numero: "))

i=0
t = arange(num)
d = zeros(num)

i = 0

while(i<size(t)):
	d[i]=a*t[i]**2/2+v0*t[i]
	i = i+1
print(d)
-- EXECUTION TIME:
0.518206
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
